Add the task's image

--- a/css/form.css
+++ b/css/form.css
@@ -1,20 +1,41 @@
-.game-form {
+.game-interact {
   width: 80%;
-  min-width: 1020px;
+  min-width: 1190px;
   margin: 0 auto;
   margin-top: 20px;
   padding: 20px;
   border: 1px solid rgba(0, 0, 0, 0.25);
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   border-radius: 2px;
+  display: flex;
+  justify-content: space-between;
+  font-size: 16px;
 }
 
-.input-wrapper, .game-form__submit-button {
+.game-form__field {
   margin-top: 10px;
+  display: flex;
+  align-items: start;
+}
+
+.game-form__input-wrapper {
+  margin-left: 5px;
+}
+
+.game-form__label {
+  line-height: calc(150% + 4px);
+}
+
+.game-form__submit-button {
+  margin-top: 20px;
 }
 
 .game-form__radius-label, .game-form__coord-select, .game-form__coord {
   margin-left: 5px;
+}
+
+.game-form__radius-label:first-child {
+  margin-left: 0;
 }
 
 .game-form__coord {
@@ -32,31 +53,51 @@
 
 .game-form__input-error {
   color: var(--error-color);
-  transition: all 0.3s;
+  transition: all 0.3s;padding: 1px 2px;
+  margin: 0;
   margin-top: 5px; 
 }
 
 .game-form__radio-group {
   display: inline;
+  line-height: calc(150% + 4px);
 }
 
-@media screen and (max-width: 1021px) {
-  .game-form {
+.game-area {
+  border: 1px solid rgba(0, 0, 0, 0.25);
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+
+@media screen and (max-width: 1190px) {
+  .game-interact {
     width: calc(100% - 10px);
     min-width: 0;
   }
 
-  .game-form__coord, .game-form__coord-select, .game-form__radio-group {
-    display: block;
-    margin-left: 0;
-    margin-top: 10px;
+  .game-form__field {
+    flex-direction: column;
   }
 
-  .game-form__radius-label:first-child {
+  .game-form__input-wrapper {
     margin-left: 0;
-  }
-
-  .game-form__input-error {
-    display: block;
   }
 }
+
+@media screen and (max-width: 850px) {
+  .game-interact {
+    flex-direction: column;
+  }
+  .game-area {
+    order: 1;
+  }
+
+  .game-form {
+    order: 2;
+  }
+
+  .game-area__image {
+    width: 100%;
+    height: auto;
+  }
+}
+
